--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-appdirs==1.4.0
-oauthlib==2.0.1
-packaging==16.8
-pyparsing==2.1.10
-requests==2.13.0
-requests-oauthlib==0.7.0
-six==1.10.0
-tweepy==3.5.0
+certifi==2019.3.9
+chardet==3.0.4
+idna==2.8
+oauthlib==3.0.1
+PySocks==1.6.8
+requests==2.21.0
+requests-oauthlib==1.2.0
+six==1.12.0
+tweepy==3.7.0
+urllib3==1.24.1
